--- a/package.json
+++ b/package.json
@@ -10,12 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-modules-core": "~0.6.4",
     "expo-status-bar": "~1.2.0",
+    "jsesc": "^3.0.2",
+    "json5": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-web": "0.17.1",
+    "sane": "^5.0.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
